@@ -22,7 +22,7 @@ use vars qw($Revision);
 use strict;
 
 $VERSION = '6.30';
-($Revision = q$Revision$) =~ /Revision:\s+(\S+)/;
+$Revision = (q$Revision$) =~ /Revision:\s+(\S+)/;
 
 @ISA = qw(Exporter);
 @EXPORT = qw(&WriteMakefile &writeMakefile $Verbose &prompt);
@@ -2090,7 +2090,7 @@ MakeMaker object. The following lines will be parsed o.k.:
 
     $VERSION = '1.00';
     *VERSION = \'1.01';
-    $VERSION = sprintf "%d.%03d", q$Revision$ =~ /(\d+)/g;
+    $VERSION = (q$Revision$) =~ /(\d+)/g;
     $FOO::VERSION = '1.10';
     *FOO::VERSION = \'1.11';
     our $VERSION = 1.2.3;       # new for perl5.6.0 
